--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -113,3 +113,12 @@
     }
   }
 }
+.bid-rejected {
+  background: rgb(255, 207, 207);
+}
+.bid-accepted {
+  background: rgb(231, 242, 255);
+}
+.bid-awarded {
+  background: rgb(255, 238, 206);
+}
