--- a/app/views/projects/bids/reject.js.erb
+++ b/app/views/projects/bids/reject.js.erb
@@ -1,3 +1,6 @@
+if (!document.querySelector(".notifications__modal")) {
+window.location.replace("/projects/<%=@project.id%>/details");
+}
 notification = document.querySelector(
 "#notification-<%=j @bid.notifications.first.id %>"
 );
