--- a/app/assets/stylesheets/freelancer_infos.scss
+++ b/app/assets/stylesheets/freelancer_infos.scss
@@ -9,7 +9,24 @@ $border-color: rgb(214, 210, 210);
   max-width: 650px;
   padding: 1rem 0 1rem;
   transition: transform 0.6s;
+  position: relative;
   @import "allprojects";
+  & > a {
+    position: absolute;
+    font-size: 0.9rem;
+    top: 2rem;
+    right: 1rem;
+    text-decoration: none;
+    color: white;
+    background: rgb(51, 161, 57);
+    padding: 0.5rem 0.8rem;
+    border-radius: 5px;
+    font-weight: 500;
+    transition: background 0.5s;
+    &:hover {
+      background: rgb(38, 122, 42);
+    }
+  }
 }
 
 /**/ ///
