--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -13,6 +13,24 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   position: relative;
   box-shadow: $box-shadow;
   border-radius: 1rem;
+
   background: white;
+  & > a {
+    position: absolute;
+    font-size: 0.9rem;
+    top: 2rem;
+    right: 1rem;
+    text-decoration: none;
+    color: white;
+    background: rgb(51, 161, 57);
+    padding: 0.5rem 0.8rem;
+    border-radius: 5px;
+    font-weight: 500;
+    transition: background 0.5s;
+    z-index: 12;
+    &:hover {
+      background: rgb(38, 122, 42);
+    }
+  }
   @import "profile/user-profile";
 }
