--- a/app/views/notifications/_freelancerNotification.html.erb
+++ b/app/views/notifications/_freelancerNotification.html.erb
@@ -1,18 +1,18 @@
-<li class="notification">
+<li class="notification bid-<%=notification.bid.aasm_state%>">
   <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
   <ul class="notification__content">
     <li class="bid__result">
       <% if notification.bid.awarded? %>
-        Congrats,<%=notification.bid.project.client.name %> awarded you the project,Click to contact.
+        Congrats,<%=notification.bid.project.client.name %> awarded you the project.
       <%elsif%>
         <%=" #{notification.bid.project.client.name} #{notification.bid.rejected? ? "rejected your bid,you can check other projects.": "accepted your bid." } " %>
       <%end%>
     </li>
     <div class="time"><%=distance_of_time_in_words_to_now(notification.bid.updated_at)%> ago</div>
   </ul>
-  <% if Conversation.between(notification.user.id,notification.bid.project.client.id ).present? && notification.bid.awarded?%>
-    <%=link_to '',conversation_messages_path(Conversation.between(notification.user.id,notification.bid.project.client.id).first)%>
+  <% if notification.bid.rejected? %>
+    <%=link_to '',root_path%>
   <% else %>
-    <%=link_to '',conversations_path(sender_id: notification.user.id,recipient_id: notification.bid.project.client.id),method: :post%>
+    <%=link_to '',project_path(notification.bid.project)%>
   <% end %>
 </li>
