--- a/app/views/projects/bids/_my-bids.html.erb
+++ b/app/views/projects/bids/_my-bids.html.erb
@@ -25,6 +25,7 @@
           <%=distance_of_time_in_words_to_now(bid.updated_at)%>
           <i class="far fa-stopwatch"></i>
         </div>
+        <%=link_to 'delete proposal',project_bid_path(bid.project,bid),method: :delete %>
       </li>
     </ul>
     <%=link_to '',project_path(bid.project)%>
