--- a/app/views/projects/details/_all_proposals.html.erb
+++ b/app/views/projects/details/_all_proposals.html.erb
@@ -10,7 +10,7 @@
         <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
         <ul>
           <li>
-            <%=bid.freelancer.name%>
+            <%=link_to bid.freelancer.name,freelancer_path(bid.freelancer)%>
           </li>
           <li>
             <span>Bid: $<%=bid.value%>/hr</span>
@@ -24,7 +24,7 @@
           </li>
         </ul>
         <div class="bid__status">
-          <%if !project_awarded?(bid.project) %>
+          <%if !project_awarded?(bid.project) && !bid.accepted? && !bid.rejected? %>
             <%=link_to 'accept', accept_project_bid_path(bid.project,bid) ,class:'accept',method: :put,remote: true%>
             <%=link_to 'reject',reject_project_bid_path(bid.project,bid) ,class:'reject',method: :put ,remote: true%>
           <% else %>
@@ -34,4 +34,8 @@
       </li >
     <%end%>
   <% end %>
+  <div class="pagination__buttons">
+    <%= link_to_previous_page bids, 'Previous ',class:'prv__btn',remote: true %>
+    <%= link_to_next_page bids, 'Next ',class:'nxt__btn' ,remote: true%>
+  </div>
 </ul>
