--- a/app/views/projects/details/_shortlisted.html.erb
+++ b/app/views/projects/details/_shortlisted.html.erb
@@ -10,7 +10,7 @@
         <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
         <ul>
           <li>
-            <%=bid.freelancer.name%>
+            <%=link_to bid.freelancer.name,freelancer_path(bid.freelancer)%>
           </li>
           <li>
             <span>Bid: $<%=bid.value%>/hr</span>
@@ -25,21 +25,13 @@
         </ul>
         <div class="bid__status">
           <%if  !project_awarded?(bid.project) && !bid.awarded? %>
-            <%= link_to "award project", award_project_bid_path(bid.project,bid),method: :put %>
-            <% if Conversation.between(bid.project.client.id,bid.freelancer.id ).present?%>
-              <%=link_to ' Message',conversation_messages_path(Conversation.between(bid.project.client.id,bid.freelancer.id).first)%>
-            <% else %>
-              <%=link_to 'Message',conversations_path(sender_id:bid.project.client.id,
-          recipient_id:bid.freelancer.id ),method: :post%>
-            <% end %>
+            <%= link_to "award project", award_project_bid_path(bid.project,bid),class: 'award',method: :put %>
+            <%=link_to 'Message',conversations_path(sender_id:bid.project.client.id,
+          recipient_id:bid.freelancer.id ),class:'message',method: :post,remote: true %>
           <%elsif bid.awarded?%>
             <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
-            <% if Conversation.between(bid.project.client.id,bid.freelancer.id ).present?%>
-              <%=link_to ' Message',conversation_messages_path(Conversation.between(bid.project.client.id,bid.freelancer.id).first),class:'message'%>
-            <% else %>
-              <%=link_to 'Message',conversations_path(sender_id:bid.project.client.id,
-          recipient_id:bid.freelancer.id ),class:'message',method: :post%>
-            <% end %>
+            <%=link_to 'Message',conversations_path(sender_id:bid.project.client.id,
+          recipient_id:bid.freelancer.id ),class:'message',method: :post,remote: true%>
           <% else %>
             <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
           <%end%>
@@ -47,4 +39,8 @@
       </li >
     <%end%>
   <% end %>
+  <div class="pagination__buttons">
+    <%= link_to_previous_page shortlisted, 'Previous ',class:'prv__btn',remote: true %>
+    <%= link_to_next_page shortlisted, 'Next ',class:'nxt__btn' ,remote: true%>
+  </div>
 </ul>
