--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -41,7 +41,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     letter-spacing: 2px;
 
     h1 {
-      font-size: 2.9rem;
+      font-size: 2.7rem;
       text-transform: capitalize;
       font-family: "Montserrat", sans-serif;
 
@@ -84,6 +84,46 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
       display: block;
       width: 80%;
       margin: 0 auto;
+    }
+  }
+}
+@media (max-width: 1200px) {
+  .hero {
+    text-align: center;
+    position: relative;
+    &::before {
+      height: 80%;
+    }
+    .banner {
+      padding-top: 5rem;
+      align-self: flex-start;
+      a {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+    .banner-illustration {
+      display: none;
+    }
+  }
+}
+@media (max-width: 786px) {
+  .hero {
+    .banner {
+      h1 {
+        font-size: 2rem;
+      }
+      p {
+        font-size: 1.1rem;
+      }
+    }
+  }
+}
+@media (max-width: 480px) {
+  .hero {
+    .banner {
+      padding: 1rem;
     }
   }
 }
