--- a/app/assets/stylesheets/project/bids.scss
+++ b/app/assets/stylesheets/project/bids.scss
@@ -45,6 +45,7 @@
     }
     .bid__created-at {
       display: flex;
+      position: relative;
       & > div,
       & > ul {
         flex: 1;
@@ -82,6 +83,23 @@
             width: 40px;
             height: 40px;
           }
+        }
+      }
+      & > a {
+        position: absolute;
+        font-size: 0.9rem;
+        top: 0;
+        right: 0rem;
+        text-decoration: none;
+        color: white;
+        background: rgb(51, 161, 57);
+        padding: 0.5rem 0.8rem;
+        border-radius: 5px;
+        font-weight: 500;
+        transition: background 0.5s;
+        z-index: 12;
+        &:hover {
+          background: rgb(38, 122, 42);
         }
       }
     }
