--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,5 +88,31 @@
       </div>
     </div >
     <%= yield %>
+    <footer class="footer">
+      <ul class="footer__nav">
+        <li class="footer__item">
+          <%=link_to 'About',root_path,class:'footer__link'%>
+        </li>
+        <li class="footer__item">
+          <%=link_to 'Customer Support',root_path,class:'footer__link'%>
+        </li>
+        <li class="footer__item">
+          <%=link_to 'Terms of Use',root_path,class:'footer__link'%>
+        </li>
+        <li class="footer__item">
+          <%=link_to 'Privacy Policy',root_path,class:'footer__link'%>
+        </li>
+        <li class="footer__item">
+          <%=link_to 'Carrers',root_path,class:'footer__link'%>
+        </li>
+        <li class="footer__item">
+          <%=link_to 'Contact us',root_path,class:'footer__link'%>
+        </li>
+      </ul>
+      <%=image_tag 'logo.png',class:"footer__logo" %>
+      <p class="footer__copyright">
+        Copyright &copy; 2021 BidMaster .All right reserved. 
+      </p>
+    </footer>
   </body>
 </html>
