--- a/app/views/projects/bids/history.html.erb
+++ b/app/views/projects/bids/history.html.erb
@@ -17,4 +17,4 @@
     <%= link_to_previous_page @bids, 'Previous ',class:'prv__btn' %>
     <%= link_to_next_page @bids, 'Next ',class:'nxt__btn' %>
   </div>
-</section>
+</main>
