--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,3 @@
-<aside class="project__modal">
+<div class="project__modal show">
   <%=render "job__post-modal", {project: @project,bid: @bid } %>
-</aside>
+</div>
