--- a/app/views/profiles/_user_profile.html.erb
+++ b/app/views/profiles/_user_profile.html.erb
@@ -1,14 +1,14 @@
 <div class="user__picture-<%=user.role%>">
   <%=inline_svg_tag 'default_avatar.svg'%>
 </div>
-<%if user_freelancer?(current_user) && authenticate_profile(user)%>
-  <%=link_to 'Edit Profile',edit_freelancer_info_path(current_user.freelancer_info),class:'edit__profile' if freelancer_already_registered? %>
+<%if user_freelancer?(current_user) && authenticate_profile(user) && request.path == freelancer_path(current_user)%>
+  <%=link_to 'Edit Profile',edit_bidding_profile_path(current_user.bidding_profile),class:'edit__profile' if bidding_profile_exist? %>
 <% end %>
 <ul class="user__profile">
   <li class="user__name">
     <%=user.name%>
     <div class="category">
-      <%=user.freelancer_info.try(:category)%>
+      <%=user.bidding_profile.try(:category)%>
       <%=user.role unless user_freelancer?(user)%>
     </div>
   </li>
