--- a/app/views/projects/_job__post-modal.html.erb
+++ b/app/views/projects/_job__post-modal.html.erb
@@ -51,7 +51,7 @@
     </ul>
   </div>
   <%if user_freelancer?(current_user)%>
-    <section class="place__bid">
+    <section class="place__bid bid-<%=@bid.awarded? ? "awarded-disable" : ""%>">
       <%=form_for [project,bid],remote: true do|f|%>
         <div class="bid__proposal-field">
           <%=f.text_area :proposal,placeholder:'your proposal'%>
